# MS

./: .dockerignore  .env.template  .env.tmpl  .gitignore  .mypy.ini  Pipfile  docker-compose.yml  pyproject.toml  setup.sh  test.py
api/: deps.py  utils.py
api/routes/: __init__.py  auth.py  organizations.py  users.py
db/: utils.py
lib/: Jwt.py  Redis.py  const.py
migrations/: env.py  script.py.mako
migrations/versions/: 40c6f3dc4c6d_create_users.py  a591bc267bc6_create_organizations.py  d7d080fe51ad_create_custom_values.py  f65bf758ecbc_create_custom_fields.py
models/: _utils.py  custom_field.py  custom_value.py  organization.py  role.py  user.py
pgadmin/: .env.tmpl
postgres/: .env
redis/: Dockerfile
schemas/: jwt.py  organization.py  user.py
scripts/: alembic.sh  setup.sh
scripts/initdb/: 0-init.sh  init.sh
server/api/: utils.py
server/lib/: Jwt.py  Redis.py
server/migrations/: script.py.mako
server/models/: __init__.py  _utils.py  custom_value.py
server/schemas/: user.py
server/services/: users.py
services/: auth.py  organizations.py  users.py
web/: .env  .env.tmpl  .pylintrc  Dockerfile  Pipfile  main.py  requirements-dev.txt  requirements.txt
web/alem/: env.py  script.py.mako
web/api/: deps.py
web/db/: __init__.py  base.py  env.py  utils.py
web/lib/: Jwt.py  auth.py  cache.py  const.py
web/migrations/: env.py
web/models/: __init__.py  _model.py  _utils.py  custom_field.py  custom_value.py  custom_values.py  organization.py  role.py  user.py
web/repositories/: __init__.py  _utils.py  organizations.py  roles.py  (+1 more)
(+31 files in other folders)
