[tool.poetry]
name = "superuser"
version = "0.1.0"
description = ""
authors = ["Carlos A. Ospina <carlosaospinac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.5"
alembic = "^1.5.8"
psycopg2 = "^2.8.6"
pydantic = "^1.8.1"
bcrypt = "^3.2.0"
PyJWT = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
pylint-quotes = "^0.2.1"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
